--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Prueba de Ingreso</string>
     <string name="busqueda">Ingrese un texto de búqueda</string>
     <string name="posts">Ver publicaciones.</string>
+    <string name="loading">Loading ...</string>
 </resources>
